--- a/README
+++ b/README
@@ -1,1 +1,6 @@
 This is a two player snake game. Each player connects to the server and can play each other wirelessly.
+
+To build the game, run "make" in the root of the repository.
+This will generate "SnakeClient" and "SnakeServer" executables in their respective folders.
+Run SnakeServer to start the game server. Run the client as:
+./SnakeClient <IP ADDRESS or HOSTNAME> <PORT (7750 by default)>
